[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/InGameLobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/big_number.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Signika/Signika-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/button_font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[node name="InGameLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 360.0
margin_bottom = 671.0

[node name="PartyIdLabel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 320.0
margin_bottom = 61.0
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PartyIdLabel"]
margin_right = 320.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = "0000"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 320.0
margin_bottom = 93.0
columns = 3

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 129.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 133.0
margin_right = 186.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 190.0
margin_right = 319.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Status"
align = 2

[node name="PlayersContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 320.0
margin_bottom = 97.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayersContainer"]
margin_right = 320.0

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 320.0
margin_bottom = 101.0
size_flags_vertical = 2

[node name="ReadyButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 481.0
margin_right = 320.0
margin_bottom = 535.0
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ReadyButton"]
margin_right = 320.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Ready"

[node name="StartGameButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 539.0
margin_right = 320.0
margin_bottom = 593.0
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/StartGameButton"]
margin_right = 320.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Start Game"

[node name="LeaveButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 597.0
margin_right = 320.0
margin_bottom = 631.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LeaveButton"]
margin_right = 320.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Leave"
